# Quick3D-Engine

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  README.md  engine-spec.md  msl_out.metal  patch.diff  path_tracer_upgrade.md  test_load.cs  test_metal_struct.mm
Content/: README.md
Content/assets/: M_Dumpster.mat  Material_25.mat  None.mat  Sketchfab_model.mdl  Sketchfab_model_part_0.msh  dragon.scene.json  dragon_tex_0.tex  dragon_tex_1.tex  dumpster.scene.json  dumpster_tex_0.ktx2  dumpster_tex_0.tex  dumpster_tex_1.ktx2  dumpster_tex_1.tex  dumpster_tex_2.ktx2  dumpster_tex_2.tex  simple_metal_fence.scene.json  simple_metal_fence_tex_0.ktx2  simple_metal_fence_tex_1.ktx2  simple_metal_fence_tex_1.tex  simple_metal_fence_tex_2.ktx2  simple_metal_fence_tex_2.tex
Content/materials/: lambert2SG.mat
Content/models/: Sketchfab_model.mdl  Sketchfab_model_part_0.msh
Content/models/materials/: barrel_mat.mat
Content/scenes/: barrel.scene.json  hello.scene.json
Content/shaders/: blit.slang  blit_depth.slang  blit_test.slang  cull.slang  disney_bsdf.slang  grid.slang  id_picking.slang  imgui.slang  minimal_test.slang  nishita_sky.slang  outline_composite.slang  outline_mask.slang  path_tracer.slang  pbr.slang  pbr_sky.slang  scene_data.slang  triangle.metal  triangle.slang
Cook/: CMakeLists.txt  README.md  main.cpp
Editor/: App.axaml  App.axaml.cs  Engine.Editor.csproj  GameAssemblyLoadContext.cs  Info.plist  MainWindow.axaml  MainWindow.axaml.cs  ModulesJsonLoggingReader.cs  Program.cs  README.md
Editor/Behaviors/: NumericInputBehavior.cs
Editor/Services/: ThumbnailGenerator.cs
Editor/ViewModels/: AssetImportViewModel.cs  ConsolePanelViewModel.cs  ContentBrowserViewModel.cs  HierarchyViewModel.cs  InspectorViewModel.cs  MainWindowViewModel.cs  MaterialEditorViewModel.cs  ViewportPanelViewModel.cs  WelcomeViewModel.cs
Editor/Views/: AssetImportWindow.axaml  AssetImportWindow.axaml.cs  ConsolePanelView.axaml  ConsolePanelView.axaml.cs  ContentBrowserView.axaml  ContentBrowserView.axaml.cs  MaterialEditorWindow.axaml  MaterialEditorWindow.axaml.cs  ViewportMetalLayerHost.cs  ViewportPanelView.axaml  ViewportPanelView.axaml.cs  WelcomeWindow.axaml  WelcomeWindow.axaml.cs
Game/: EcsWorld.cs  Engine.Game.csproj  GameLoop.cs  GridPass.cs  HelloTrianglePass.cs  IdPickingPass.cs  ImGuiPass.cs  ImGuiRenderer.cs  OutlineCompositePass.cs  OutlineMaskPass.cs  PathTracerPass.cs  PbrPass.cs  PrimitiveMeshFactory.cs  Program.cs  README.md  Renderer.cs  SceneData.cs  SceneDataExtractor.cs
Game.Tests/: BarrelSceneLoadTests.cs  Game.Tests.csproj  Ktx2LoaderTests.cs  RhiBindlessHeapTests.cs
OutOfBand/Engine.CBindings/: AvaloniaNativeWindowInterop.cs  Engine.CBindings.csproj  EngineEcs.cs  EngineLog.cs  NativeInput.cs  NativeLibraryLoader.cs  Rhi.cs
TestSize/: Program.cs
docs/: commit-conventions.md  project-descriptor.md  style.md
docs/ai/: navmesh.md
docs/architecture/: engine-mem.md  engine_log.md  module-layout.md  overview.md  thread-model.md
docs/asset-pipeline/: cook.md  formats.md  tags.md
docs/audio/: steam-audio.md
docs/cinematic/: timeline.md
docs/console/: logging-config.md  roslyn-repl.md
docs/crash/: dump-format.md
docs/ecs/: components.md  flecs-integration.md
docs/editor/: assembly-hot-reload.md  content-browser.md  extensions.md  tools.md
docs/localization/: tables.md
docs/networking/: rollback.md
docs/physics/: jolt-binding.md
docs/profiling/: tracy.md
docs/renderer/: render-graph.md
docs/rhi/: api.md  metal.md  vulkan.md
docs/save/: snapshot-format.md
docs/scene/: pbr-pipeline.md
engine_c/: README.md  engine_ecs.c  engine_ecs.h  engine_log.c  engine_log.h  engine_mem.c  engine_mem.h  engine_transcode.cpp  engine_transcode.h  test_engine_mem.c
engine_c/input/: input.h  input_backend.h  input_dispatch.c  input_linux.c  input_mac.m  input_win32.c
engine_c/rhi/: rhi.h  rhi_backend.h  rhi_dispatch.c  rhi_metal.mm  tlas_patch.mm
engine_cs/: README.md
engine_cs/Engine.Assets/: AssetRegistry.cs  Engine.Assets.csproj  Ktx2Loader.cs  MaterialLoader.cs  MeshLoader.cs  ModelLoader.cs  TextureLoader.cs
engine_cs/Engine.RHI/: CommandRecorder.cs  EcsWorld.cs  Engine.RHI.csproj  IEntityStore.cs  IGameLoop.cs  InputState.cs  RhiAccelStruct.cs  RhiBindlessHeap.cs  RhiBuffer.cs  RhiDevice.cs  RhiFence.cs  RhiHeap.cs  RhiPipeline.cs  RhiSampler.cs  RhiShader.cs  RhiSwapchain.cs  RhiTexture.cs
engine_cs/Engine.RenderGraph/: Engine.RenderGraph.csproj  MemoryAliasingPlan.cs  RenderGraphBuilder.cs  RenderGraphCompiler.cs  RenderGraphExecutor.cs  RenderPass.cs  ResourceHandle.cs
engine_cs/Engine.Scene/: Engine.Scene.csproj  Scene.cs  SceneLoader.cs  SceneSaver.cs
engine_cs/Engine.Scene/Components/: Camera.cs  Transform.cs
scripts/: README.md  build-mac-app.sh
